feat(participant): add CRUD participant and setup vercel
